src/tests/decl2.err
Microsoft (R) 32-bit C/C++ Optimizing Compiler Version 12.00.8804 for 80x86
Copyright (C) Microsoft Corp 1984-1998. All rights reserved.

decl2.c
decl2.c(4) : error: Too large __int width
decl2.c(5) : error: Invalid __int width (100)
decl2.c(9) : error: Too large __float width
decl2.c(10) : error: Invalid __float width (100)
decl2.c(14) : error: More than one type in declaration
decl2.c(15) : error: More than one type in declaration
decl2.c(16) : error: More than one type in declaration
decl2.c(19) : warning: C99 forbids declarations without a specifier
decl2.c(19) : error: '_Complex'/'_Imaginary' only apply to floating point types
decl2.c(20) : error: '_Complex'/'_Imaginary' conflict in declaration
decl2.c(20) : warning: C99 forbids declarations without a specifier
decl2.c(20) : error: '_Complex'/'_Imaginary' only apply to floating point types
decl2.c(21) : error: '_Complex'/'_Imaginary' conflict in declaration
decl2.c(22) : error: More than one type in declaration
decl2.c(22) : error: '_Complex'/'_Imaginary' conflict in declaration
decl2.c(23) : warning: C99 forbids declarations without a specifier
decl2.c(23) : error: '_Complex'/'_Imaginary' only apply to floating point types
decl2.c(24) : error: '_Complex'/'_Imaginary' conflict in declaration
decl2.c(24) : warning: C99 forbids declarations without a specifier
decl2.c(24) : error: '_Complex'/'_Imaginary' only apply to floating point types
decl2.c(25) : error: '_Complex'/'_Imaginary' conflict in declaration
decl2.c(26) : error: '_Complex'/'_Imaginary' conflict in declaration
decl2.c(26) : error: More than one type in declaration
decl2.c(28) : error: '_Complex'/'_Imaginary' conflict in declaration
decl2.c(28) : warning: C99 forbids declarations without a specifier
decl2.c(28) : error: '_Complex'/'_Imaginary' only apply to floating point types
decl2.c(29) : error: '_Complex'/'_Imaginary' conflict in declaration
decl2.c(30) : error: More than one type in declaration
decl2.c(30) : error: '_Complex'/'_Imaginary' conflict in declaration
decl2.c(31) : error: More than one type in declaration
decl2.c(31) : error: '_Complex'/'_Imaginary' conflict in declaration
decl2.c(31) : error: 'long' only applies to 'int' and 'double'
decl2.c(33) : error: 'signed'/'unsigned' conflict in declaration
decl2.c(34) : error: 'signed'/'unsigned' conflict in declaration
decl2.c(35) : error: 'signed'/'unsigned' conflict in declaration
decl2.c(35) : error: 'v20': type is incompatible with previous declaration
     decl2.c(34) : See previous declaration of 'v20'
decl2.c(36) : error: 'signed'/'unsigned' conflict in declaration
decl2.c(46) : error: 'short'/'long'/'long long' conflict in declaration
decl2.c(48) : error: 'short'/'long'/'long long' conflict in declaration
decl2.c(49) : error: 'short'/'long'/'long long' conflict in declaration
decl2.c(50) : error: 'short'/'long'/'long long' conflict in declaration
decl2.c(50) : error: 'short'/'long'/'long long' conflict in declaration
decl2.c(55) : warning: More than one 'const' in declaration
decl2.c(56) : warning: More than one 'const' in declaration
decl2.c(59) : warning: More than one 'volatile' in declaration
decl2.c(60) : warning: More than one 'volatile' in declaration
decl2.c(62) : warning: C99 forbids declarations without a specifier
decl2.c(63) : warning: More than one 'const' in declaration
decl2.c(64) : warning: More than one 'volatile' in declaration
decl2.c(67) : error: More than one storage class in declaration
decl2.c(68) : error: More than one type in declaration
decl2.c(68) : error: More than one storage class in declaration
decl2.c(70) : warning: C99 forbids declarations without a specifier
decl2.c(72) : error: '_Complex'/'_Imaginary' only apply to floating point types
decl2.c(73) : error: '_Complex'/'_Imaginary' only apply to floating point types
decl2.c(75) : error: 'signed'/'unsigned' only apply to 'int' and 'char'
decl2.c(76) : error: 'signed'/'unsigned' only apply to 'int' and 'char'
decl2.c(79) : error: 'short' only applies to 'int'
decl2.c(80) : error: 'short' only applies to 'int'
decl2.c(83) : error: 'long' only applies to 'int' and 'double'
decl2.c(87) : error: 'long long' only applies to 'int'
